# nonebot-plugin-nbnhhsh-q

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_nbnhhsh_q/: __init__.py  config.py
src/nonebot_plugin_nbnhhsh_q/: __init__.py
